# JustOnceCMD

./: .gitmodules  CMakeLists.txt  Key.hash  license.md  makefile  readme.md
in/: config.h.in  version.h.in
src/: getline-win.c  main.c  misc.h  qr.c  qr.h  version.c  version.h
